# gptchangelog

./: .gitignore  404.html  CHANGELOG.md  ENHANCED_FEATURES.md  INSTALL.md  LICENSE  README.md  RELEASE_GUIDE.md  deploy.sh  gptchangelog.py  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  release.sh  requirements.txt  setup.cfg  setup.py  sitemap.xml
.github/workflows/: deploy-docs.yml
changelog/: index.html
developer-guide/api-reference/: index.html
developer-guide/architecture/: index.html
developer-guide/contributing/: index.html
docs/: changelog.md  examples.md  getting-started.md  index.md  requirements.txt  robots.txt
docs/developer-guide/: api-reference.md  architecture.md  contributing.md
docs/overrides/: main.html
docs/user-guide/: advanced-usage.md  basic-usage.md  configuration.md  index.md  installation.md  templates.md
examples/: index.html
getting-started/: index.html
gptchangelog/: __init__.py  __main__.py  cli.py  config.py  enhanced_git_utils.py  enhanced_openai_utils.py  git_utils.py  main.py  openai_client.py  openai_utils.py  status.py  textual_ui.py  utils.py
gptchangelog/templates/: changelog_meta_prompt.txt  changelog_prompt.txt  commits_meta_prompt.txt  commits_prompt.txt  enhanced_changelog_prompt.txt  enhanced_commits_prompt.txt  enhanced_version_prompt.txt  es_changelog_prompt.txt  fr_changelog_prompt.txt  version_meta_prompt.txt  version_prompt.txt
overrides/: main.html
search/: search_index.json
tests/: test_config.py  test_openai_client.py
user-guide/: index.html
user-guide/advanced-usage/: index.html
user-guide/basic-usage/: index.html
user-guide/configuration/: index.html
user-guide/installation/: index.html
user-guide/templates/: index.html
