[metadata]
name = gptchangelog
version = 0.6.0
author = Xavier Jodoin
author_email = xavier@jodoin.me
description = Automatically generate a changelog using AI
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/xjodoin/gptchangelog
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
python_requires = >=3.6
install_requires =
    openai
    gitpython
    configparser
    tiktoken

[options.package_data]
gptchangelog = templates/*.txt

[options.entry_points]
console_scripts =
    gptchangelog = gptchangelog.main:main
