# Please keep all characters in this file in ASCII
# distutils uses system's locale to interpret it and not everybody
# uses UTF-8. See https://github.com/httpie/cli/issues/1039
# for an example
[wheel]


[metadata]
name = gptchangelog
version = attr: gptchangelog.__version__
author = Xavier Jodoin
author_email = python@jodoin.me
license = MIT
description = Automatically generate a changelog using AI
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Topic :: Software Development
    Topic :: Terminals
    Topic :: Text Processing
    Topic :: Utilities
project_urls =
    GitHub = https://github.com/xjodoin/gptchangelog


[options]
packages = find:
install_requires =
    openai>=1.52.0
    gitpython>=3.1.40
    configparser>=6.0.0
    tiktoken>=0.8.0
    rich>=13.9.0
    importlib_metadata>=1.0.0; python_version<"3.8"
python_requires = >=3.7

[options.packages.find]
include =
    gptchangelog
    gptchangelog.*

[options.package_data]
gptchangelog = templates/*.txt

[options.entry_points]
console_scripts =
    gptchangelog = gptchangelog.__main__:main
